# nad-rust

./: Cargo.toml
.cargo/: config.toml
nad/: Cargo.toml
nad/src/: lib.rs  nadauth.rs  remoteconfig.rs  test.rs
src/: lib.rs  main.rs  nad.rs
