workspace = { members = ["nad"] }
[package]
name = "nad-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nad = { version = "0.1", path = "./nad" }
env_logger = "0.11.2"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mac_address2 = "2.0.1"
